resources/less/chat.less
@top-bar-height: 2em;
@card-width: 20em;
@pad: 1em;

body {
  margin: 0;
  padding: 0;
  font-family: Tahoma;
  font-size: 12px;
  background: #eee;
}

.floating-box() {
  background: white;
  box-shadow: 0 1px 2px 0 #ccc;
  width: @card-width;
  padding: @pad;
  box-sizing: border-box;
//  display: inline-block;
//  vertical-align: bottom;

  position: relative;
}

.tiny-avatar() {
  width: 1.2em;
  height: 1.2em;
}

.error-banner {
  font-size: 2em;
  background-color: rgba(255, 5, 14, 0.6);
  text-align: center;
  .close {
    margin-left: 1em;
    cursor: pointer;
  }
}

.tag {
  font-size: 0.75em;
  display: inline-block;
  padding: 2px 4px;
  border-radius: 4px;
  margin-right: 0.5em;
  text-transform: uppercase;
  letter-spacing: 0.1em;
}

.threads {
  position: absolute;
  top: @top-bar-height;
  right: 0;
  bottom: @pad;
  left: 0;
  padding-left: @pad;

  display: -webkit-flex;
  display: flex;
  -webkit-align-items: flex-end;
  align-items: flex-end;
  overflow: scroll;
}

.thread {
  margin-right: @pad;

  min-width: @card-width;
  width: @card-width;
  box-sizing: border-box;

  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  height: 100%;

  &:before { // switch to after to align at top
    content: "";
    -webkit-flex-grow: 1;
    flex-grow: 1;
    height: 1em;
  }

  .card {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    box-shadow: 0 1px 2px 0 #ccc;
    max-height: 100%;
    background: white;
  }

  .head {
    height: 3.5em;
    width: 100%;
    position: relative;
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
    //box-shadow: 0 2px 2px -2px #ccc;

    .tags {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      color: white;
      margin: @pad;
      z-index: 1;
    }
    .close {
      position: absolute;
      padding: @pad;
      top: 0;
      right: 0;
      z-index: 10;
      cursor: pointer;
    }
  }

  .messages {
    overflow: scroll;
    padding: 0 @pad;
  }
  .message.new {
    -webkit-flex-shrink: 0;
    flex-shrink: 0;
    min-height: 3.5em;
  }
}

.thread {
  .tags-preview {
    .ambiguous .group {
      border: 1px dashed black;
      cursor: pointer;
    }
  }

  .message {
    position: relative;
    margin: 0 0 1em;

    .avatar {
      .tiny-avatar();
      display: inline-block;
      position: absolute;
      border-radius: 25%;
     }

    .content {
      white-space: pre-wrap;
      word-break: break-word;
      display: inline-block;
      padding-left: 2em;
      width: 100%;
      box-sizing: border-box;
    }

    &.new {
      padding-left: @pad + 2em;
      padding-top: @pad;
      padding-right: @pad;
      margin-bottom: 0;
      textarea {
        width: 100%;
        border: none;
        resize: vertical;
        box-sizing: border-box;
        &:focus {
          outline: none;
        }

      }
      .autocomplete {
        border: 1px solid #ccc;
        box-shadow: 0 1px 2px 0 #ccc;
        .result {
          padding: 0.25em 0.5em;
          .color-block {
            width: 1em;
            height: 2em;
            float: left;
            border-radius: 2px;
            margin: 0.25em 0.5em 0.25em 0;
          }
          .tag-name {

          }
          .group-name {
            color: #ccc;
          }
          &:hover {
            background: #eee;
          }
          &.highlight {
            .tag-name {
              font-weight: bold;
            }
          }
        }
      }
    }
    .info {
      position: absolute;
      color: rgba(0,0,0,0);
      font-size: 0.8em;
    }
    &:hover .info, &:last-child .info {
      color: grey;
    }
  }
}

.login {
  .floating-box;
  input {
    width: 100%;
    margin: 0 0 1em;
    padding: 0.25em;
    box-sizing: border-box;
  }
}

.meta {
  .avatar {
    width: 2em;
    height: 2em;
    cursor: pointer;
    position: absolute;
    top: 1em;
    right: 1em;
  }
  .user-modal {
    background: #333;
    position: absolute;
    z-index: 100;
    top: 2em;
    left: 2em;
    bottom: 2em;
    right: 2em;
    padding: 1em;
    box-sizing: border-box;
    overflow-y: scroll;
    overflow-x: hidden;
    display: none;
    .close {
      color: white;
      font-size: 2em;
      cursor: pointer;
      float: right;
    }
    .nickname {
      .current-name {
        color: white;
      }
      .error {
        color: red;
      }
    }
    &.active {
      display: block;
    }
    .pending-invites {
      color: #999;
      ul.invites {
        padding-left: 15px;
      }
    }
    .group {
      .name {
        color: #999;
        margin-bottom: 0.25em;
      }
      .invite-form {
        .autocomplete {
          background-color: #999;
          .results {
            list-style-type: none;
            padding-left: 10px;
            .result {
              &:hover {
                background: #eee;
              }
            }
            .active {
              font-weight: bold;
            }
          }
        }
      }
      .tags {
        margin: 1em 0;
        .tag {
          color: #999;
          margin: 0.25em 0;
          cursor: pointer;
          .color-block {
            width: 1rem;
            height: 1rem;
            display: inline-block;
            border-radius: 2px;
            color: #333;
            vertical-align: middle;
            margin-right: 0.25em;
            text-align: center;
          }
          .name {
            vertical-align: middle;
          }
        }
      }
    }
    .new-group {
      label {
        color: #999;
        font-size: 1.2em;
      }
    }
    .logout {
      // TODO: make this look better with multiple groups
      margin: 10em 0 0;
      border-radius: 3px;
      border: 1px solid #999;
      color: #999;
      padding: 0.25em;
      cursor: pointer;
    }
  }
}

